add exists(&sub)